Made changes to ProgressTrackingViewModel for boundary testing and updated corresponding unit test.